--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 			<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 				<div class="container-fluid">
-					<label for="input-id">Equation</label>
+					<label for="input-id">Equation</label> <br>
+					<i>Use JavaScript syntax</i>
 					<input type="text" id="equation" class="form-control" required="required"  value="1/(x*x+1)*10*Math.sin(x*3)" onChange="readParams()">
 
 					<label for="input-id">Step</label>
