--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
+		<style type="text/css" media="screen">
+			body {
+			    background-image: url("wallpaper.jpg");
+			}
+			h1 {
+			    color: white;
+			}
+		</style>
+
 		<title>Graphing Calculator</title>
 	</head>
 	<body>
@@ -12,28 +21,34 @@
 		<div class="container-fluid">
 
 			<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-				<div class="container-fluid">
-					<label for="input-id">Equation</label> <br>
-					<i>Use JavaScript syntax</i>
-					<input type="text" id="equation" class="form-control" required="required"  value="1/(x*x+1)*10*Math.sin(x*3)" onChange="readParams()">
+				<div class="jumbotron">
+				
+					<div class="container-fluid">
+						<label for="input-id">Equation</label> <br>
+						<i>Use JavaScript syntax</i>
+						<input type="text" id="equation" class="form-control" required="required"  value="1/(x*x+1)*10*Math.sin(x*3)" onChange="readParams()">
 
-					<label for="input-id">Step</label>
-					<input type="number" id="step" class="form-control" required="required" value="1"  onChange="readParams()">
+						<label for="input-id">Step</label>
+						<input type="number" id="step" class="form-control" required="required" value="1"  onChange="readParams()">
 
-					<label for="input-id">X Shift</label>
-					<input type="number" id="xShift" class="form-control" required="required" value="0" onChange="readParams()">
+						<label for="input-id">X Shift</label>
+						<input type="number" id="xShift" class="form-control" required="required" value="0" onChange="readParams()">
 
-					<label for="input-id">Y Shift</label>
-					<input type="number" id="yShift" class="form-control" required="required" value="0" onChange="readParams()">
+						<label for="input-id">Y Shift</label>
+						<input type="number" id="yShift" class="form-control" required="required" value="0" onChange="readParams()">
+						<br>
+						<button type="button" class="btn btn-default" onClick="readParams()">Update</button>
+					</div>
 					<br>
-					<button type="button" class="btn btn-default" onClick="readParams()">Update</button>
 				</div>
-				<br>
 			</div>
 
 			<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-				<div class="container text-center">
-					<canvas id="graphCanvas" width="1100" height="700"></canvas>	
+				<div class="jumbotron">
+					<div class="container text-center">
+					
+						<canvas id="graphCanvas" width="1100" height="700"></canvas>
+					</div>
 				</div>
 			</div>
 
