--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 					<div class="container-fluid">
 						<label for="input-id">Equation</label> <br>
 						<i>Use JavaScript syntax</i>
-						<input type="text" id="equation" class="form-control" required="required"  value="1/(x*x+1)*10*Math.sin(x*3)" onChange="readParams()">
+						<input type="text" id="equation" class="form-control" required="required"  value="1/(x*x+1)*10*Math.sin(x*2)" onChange="readParams()">
 
 						<label for="input-id">Step</label>
-						<input type="number" id="step" class="form-control" required="required" value="1"  onChange="readParams()">
+						<input type="number" id="step" class="form-control" required="required" value="1" min="1"  onChange="readParams()">
 
 						<label for="input-id">X Shift</label>
 						<input type="number" id="xShift" class="form-control" required="required" value="0" onChange="readParams()">
